<resources>
    <string name="app_name">Cristo Class</string>
    <string name="btn_login">INICIAR SESION</string>
    <string name="textoInicial">Introduce tu login y password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="volver">Volver</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="userName">Usuario</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="tv_password">Contraseña</string>


    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
</resources>
